--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -16,8 +16,8 @@
 <body>    
     {{> navbar}}
     <main class="container">        
-        {{!-- {{> errors}} --}}
-        {{!-- {{> messages}}Definiendo una vista parcial, con los msgs de alerta   --}}
+        {{> errors}}
+        {{> messages}} {{!-- Definiendo una vista parcial, con los msgs de alerta   --}}
         {{{   body  }}} 
     </main>    
     
