--- a/src/views/partials/navbar.hbs
+++ b/src/views/partials/navbar.hbs
@@ -2,6 +2,7 @@
   <div class="container">
     <a class="navbar-brand text-light" href="/">
          <img src="/images/logo_transparent.png" alt="" height="70">
+         My Day App
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -11,10 +12,15 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
+        </ul>      
+        <ul class="navbar-nav ml-auto">           
+            <li class="nav-item active">
+                <a class="nav-link" href="/users/signin">SigIn <span class="sr-only">(current)</span></a>
+            </li>
             <li class="nav-item">
-                <a class="nav-link" href="/about">About</a>
-            </li>      
-        </ul>        
+                <a class="nav-link" href="/users/signup">SignUp</a>
+            </li>   
+        </ul>  
     </div>
   </div>
 </nav>
