Login and CompleteRegister completed, also I added the isAuthenticated auth method.

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -5,9 +5,9 @@ body{
 }
 
 /*INDEX VIEW*/
-.navbar-nav li a{
+/* .navbar-nav li a{
     color: #fff !important;
-}
+} */
 
 .title h1{
     font-size: 5rem;
