--- a/src/views/partials/navbar.hbs
+++ b/src/views/partials/navbar.hbs
@@ -10,17 +10,33 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link text-light" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
         </ul>      
-        <ul class="navbar-nav ml-auto">           
-            <li class="nav-item active">
-                <a class="nav-link" href="/users/signin">SigIn <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/users/signup">SignUp</a>
-            </li>   
-        </ul>  
+        {{#if user}}
+            <ul class="navbar-nav ml-auto">           
+                    <li class="nav-item active">
+                        <a class="nav-link text-light" href="/routines">My Routine <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <span class="text-light">Account</span>
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">                            
+                            <a class="dropdown-item" href="/users/logout">Logout</a>
+                        </div>
+                    </li>
+            </ul>
+        {{else}}
+            <ul class="navbar-nav ml-auto">           
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/users/signin">SigIn <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/users/signup">SignUp</a>
+                    </li>   
+            </ul>
+        {{/if}}  
     </div>
   </div>
 </nav>
