--- a/src/views/users/signin.hbs
+++ b/src/views/users/signin.hbs
@@ -5,11 +5,11 @@
                 <form action="/users/signin" method="POST">
                     <div class="form-group">
                         <label for="username">Username</label>
-                        <input type="text" class="form-control" name="username" id="username">
+                        <input type="text" class="form-control" name="user" id="user">
                     </div>
                     <div class="form-group">
                         <label for="username">Password</label>
-                        <input type="text" class="form-control" name="password" id="password">
+                        <input type="password" class="form-control" name="password" id="password">
                     </div>
                     <div class="form-group">
                         <input type="submit" class="btn btn-block btn-primary" value="Sign in">
