--- a/src/views/users/signup.hbs
+++ b/src/views/users/signup.hbs
@@ -13,11 +13,11 @@
                     </div>
                     <div class="form-group">
                         <label for="username">Password</label>
-                        <input type="text" class="form-control" name="password" id="password" value={{password}}>
+                        <input type="password" class="form-control" name="password" id="password" value={{password}}>
                     </div>
                     <div class="form-group">
                         <label for="username">Confirm Password</label>
-                        <input type="text" class="form-control" name="confirmPassword" id="confirmPassword" value={{confirmPassword}}>
+                        <input type="password" class="form-control" name="confirmPassword" id="confirmPassword" value={{confirmPassword}}>
                     </div>
                     <div class="form-group">
                         <input type="submit" class="btn btn-block btn-primary" value="Sign in">
