--- a/src/views/users/completeRegister.hbs
+++ b/src/views/users/completeRegister.hbs
@@ -36,7 +36,7 @@
                                  
                 </form>   
                 <div class="form-group">
-                    <a href="/routines" class="btn btn-block btn-secondary">Skip</a>
+                    <a href="/main?skip=true" class="btn btn-block btn-secondary">Skip</a>
                 </div>             
             </div>
         </div>
