--- a/src/views/partials/navbar.hbs
+++ b/src/views/partials/navbar.hbs
@@ -7,20 +7,15 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link text-light" href="/">Home <span class="sr-only">(current)</span></a>
-            </li>
-        </ul>      
+    <div class="collapse navbar-collapse" id="navbarNav">             
         {{#if user}}
             <ul class="navbar-nav ml-auto">           
                     <li class="nav-item active">
-                        <a class="nav-link text-light" href="/routines">My Routine <span class="sr-only">(current)</span></a>
+                        <a class="nav-link text-light" href="/main">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <span class="text-light">Account</span>
+                            <span class="text-light">Account</span>
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">                            
                             <a class="dropdown-item" href="/users/logout">Logout</a>
@@ -28,6 +23,11 @@
                     </li>
             </ul>
         {{else}}
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link text-light" href="/">Home <span class="sr-only">(current)</span></a>
+                </li>
+            </ul> 
             <ul class="navbar-nav ml-auto">           
                     <li class="nav-item active">
                         <a class="nav-link" href="/users/signin">SigIn <span class="sr-only">(current)</span></a>
