--- a/src/views/partials/routine/all-routines.hbs
+++ b/src/views/partials/routine/all-routines.hbs
@@ -4,7 +4,7 @@
             <table class="table text-light">
                 <thead>
                     <tr>
-                        <th scope="col">Day</th>
+                        <th scope="col">Days</th>
                         <th scope="col"></th>      
                     </tr>
                 </thead>
@@ -18,8 +18,7 @@
                                         <i class="fas fa-ellipsis-h text-light"></i>
                                     </button>
                                     <div class="dropdown-menu" aria-labelledby="dropdownMenuOffset">
-                                        <a class="dropdown-item" href="/routines/check-routine/{{numberDay}}">Check</a>
-                                        <a class="dropdown-item" href="/routines/edit-routine/{{numberDay}}">Edit</a>                                    
+                                        <a class="dropdown-item" href="/routines/check-routine/{{numberDay}}">Check</a>                               
                                     </div>
                                 </div>
                             </td>
